# src/main/resources/openapi/obc-api.yml
@@ -28,6 +28,8 @@ paths:
     $ref: './paths/user-exchange.yml'
   /gw/login:
     $ref: './paths/gw-login.yml'
+  /unlink-account:
+    $ref: './paths/unlink-account.yml'
 
 components:
   schemas:
@@ -43,6 +45,10 @@ components:
       $ref: './schemas/account/VerifyOtpRequest.yml'
     VerifyOtpResponse:
       $ref: './schemas/account/VerifyOtpResponse.yml'
+    UnlinkAccountRequest:
+      $ref: './schemas/account/UnlinkAccountRequest.yml'
+    UnlinkAccountResponse:
+      $ref: './schemas/account/UnlinkAccountResponse.yml'
     AuthenticationRequest:
       $ref: './schemas/account/AuthenticationRequest.yml'
     AuthenticationResponse:
